styles.css
* {
    font-family: 'Raleway', sans-serif;
}

html, body {
    background-color: #eed8c2;
    margin: 0;
    font-size: 18px;
}

#body-container {
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: row;
    background-color: white;
}

#left-container {
    display: flex;
    width: 640px;
    padding-top: 100px;
    justify-content: center;
    background-color: #eed8c2;
}

#img-container {
    max-width: 500px;
    flex: 1;
}

#main-img {
    max-width: 100%;
}

#right-container {
    display: flex;
    justify-content: flex-start;
    background-color: white;
    flex: 1;
    height:fit-content;
    width: 100%;
    padding-top: 30px;
}

#logo {
    width: 169px;
}

#description {
    color: #677780;
    margin-top: 35px;
    font-size: 1em;
    font-weight: 400;
}

.form-row.full-name-div{
    margin-top: 46px;
}

#form-container {
    display: flex;
    flex-direction: column;
    background-color:white;
    padding: 70px;
    max-width: 380px;
    flex: 1;
}

.form-row {
    margin-top: 47px;
    font-size: 1em;
    position: relative;
    width: 100%;
}

.form-input {
    width: calc(100% - 18px);
    height: 50px;
    border-radius: 6px;
    border-width: 2.6px;
    border-style: solid;
    border-color: #677780;
    opacity: 100%;
    font-size: 1em;
    font-weight: 500;
    transition: all 140ms ease-in;
    font-family: inherit;
    color: #677780;
    background-color: white;
    padding-left: 18px;
}

.form-input:focus {
    outline: none;
    border-color: #df8e71
}

.form-label {
    position: absolute;
    z-index: 9;
    background-color: white;
    padding: 7px;
    font-size: 1em;
    margin: 0px;
    top: 11px;
    left: 15px;
    width:fit-content;
    color: #677780;
    font-weight: 500;
    cursor: text;
    transition: top 120ms ease-in,
        left 120ms ease-in,
        font-size 120ms ease-in;
}

.form-input:focus ~
.form-label,
.form-input:not(:placeholder-shown).form-input:not(:focus) ~
.form-label {
    top: -15px;
    font-size: 0.8em;
    left: 14px;
    opacity: 100%;
    color: #df8e71;
}
.form-input:not(:placeholder-shown).form-input:not(:focus) ~
.form-label {
    color: #677780;
}

.required {
    margin-top: 7px;
    margin-left: 23px;
    position: absolute;
    font-family: inherit;
    font-weight: 500;
    font-size: 0.8em;
    color: #677780;
    opacity: 65%;
}

.visibility {
    position: absolute;
    right: 5px;
    top: 20px;
    width: fit-content;
    z-index: 10;
    background-color: white;
}

#eye-one, #eye-two {
    width: 25px;
    opacity: 75%;
}

.error {
    margin-top: 5px;
    margin-left: 21px;
    position: absolute;
    font-family: inherit;
    font-weight: 500;
    font-size: 0.7em;
    opacity: 75%;
    color: red;
    width: 100%;
    line-height: 16px;
    
}

.password-div {
    margin-top: 75px;
}
.confirm-password-div {
    margin-top: 23px;
}

.terms {
    padding: 0;
    margin-top: 65px;
    width: 100%;
}

#terms-container {
    display: flex;
    align-items: center;
    width: 100%;
}

#terms-container > input {
    appearance: none;
    position: relative;
    min-width: 25px;
    min-height: 25px;
    border: 2.5px solid black;
    border-radius: 4px;
    background-color: white;
    opacity: 50%;
}

#terms-container > input:focus {
    border: 2.5px solid #df8e71;
    outline: 0 none;
}

#terms-container > input::before {
    content: "✔";
    font-size: 1.1em;
    left: 5px;
    top: 2px;
    visibility: hidden;
    position: absolute;
  }

#terms-container > input:checked::before {
    visibility: visible;
  }

#terms-container > label {
    padding-left: 10px;
    color: #677780;
    font-size: 0.9em;
}

#terms-container > label > a{
    color: #df8e71;
}

#terms-container > label > a:focus {
    border: 2.5px solid #df8e71;
    outline: 0 none;
}

.required#terms-notes {
    margin-top: 5px;
    margin-left: 40px;
    font-family: inherit;
    font-weight: 500;
    font-size: 0.8em;
    color: #677780;
    opacity: 65%;
}

.submit {
    margin-top: 74px;
}

.submit > input {
    width: 100%;
    height: 55px;
    border-radius: 6px;
    background-color: #677780;
    color: white;
    font-size: 0.95em;
    font-weight: 500;
    opacity: 90%;
    border-style:none;
}

.submit > input:hover {
    opacity: 95%;
    cursor: auto;
}

.submit > input:active {
    opacity: 100%;
}

.submit > input:focus {
    outline: 0 none;
    opacity: 100%;
}

@media (max-width: 1170px) {
    #body-container {
        flex-direction: column;
    }
    #left-container {
        padding-top: 70px;
        padding-bottom: 70px;
        width: 100%;
        justify-content: center;
    }
    #img-container {
        margin-left: 30px;
        margin-right: 30px;
    }
    #right-container {
        padding-top: 70px;
        justify-content: center;
        padding: 0;
    }
    #form-container {
        margin: 0;
        padding-left: 30px;
        padding-right: 30px;
        align-items: center;
        max-width: 380px;
        align-items: stretch;
    }

    .form-row {
        max-width: 100%;  
    }

    .form-input {
        max-width: 100%;
    }

    #logo {
        align-self: center;
    }

    #description {
        text-align: center;
        line-height: 25px;
    }
}

@media (max-width: 430px) {
    .terms {
        margin-top: 85px;
    }
}

